feat: Implement multi-device management feature
- Added device management capabilities including adding, removing, and switching devices.
- Introduced a new DeviceSidebar component for device selection and management.
- Enhanced application manager to dynamically switch API URLs based on active device.
- Implemented device connection testing and status updates.
- Created a dedicated DevicesPage for displaying and managing devices.
- Integrated localStorage for persistent device state across sessions.
- Added device statistics and status indicators for better user experience.
- Documented the multi-device management feature in MULTI-DEVICE-MANAGEMENT.md.

--- a/admin/src/i18n/locales/gb.json
+++ b/admin/src/i18n/locales/gb.json
@@ -55,7 +55,8 @@
     "faq": "FAQ",
     "users": "Users",
     "projects": "Projects",
-    "applications": "Applications"
+    "applications": "Applications",
+    "devices": "Devices"
   },
   "messages": {
     "all": "See all messages",
